Just to make sure the success button and the message don't overlap

--- a/avalon.css
+++ b/avalon.css
@@ -1,11 +1,18 @@
 
 .marginset {
-  margin-top: 1%;
+  margin-top: 3%;
 }
 
-.heightincrease {
+#revealplayer {
+  height: 100px;
+  font-size: 20px;
+  margin-top: 20px;
+  font-family: monospace;
+}
+
+#content {
   height: 50px;
-  font-size: 30px;
+  font-size: 20px;
   margin-top: 5%;
   font-family: monospace;
 }
